Fix left align

--- a/assets/stylesheets/dropzone.css
+++ b/assets/stylesheets/dropzone.css
@@ -1,3 +1,7 @@
+#files tr td:first-child {
+  text-align: left;
+}
+
 /* The MIT License */
 .dropzone,
 .dropzone *,
